<resources>
    <string name="app_name">task_treeleaf</string>
    <string name="date">Date</string>
    <string name="s_n">S.N.</string>
    <string name="transactions_amount">Total Amount</string>
    <string name="item_name">Item Name</string>
    <string name="total_amount">Total Amount:</string>
    <string name="filter_with">Filter With:</string>
    <string name="calculate_sales_with_filter">Calculate Sales With Filter</string>
    <string name="add_sales">Add Sales</string>
    <string name="item_names">Item Name</string>


    <string-array name="filter_options">
        <item>All Data</item>
        <item>Monthly Data</item>
    </string-array>

</resources>