<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.MonthlySalesView">

    <!-- Filter Section -->
    <LinearLayout
        android:id="@+id/linearFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:elevation="2dp"
        android:padding="8dp"
         app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_with"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:paddingEnd="8dp"
            android:textColor="?attr/colorPrimary" />

        <Spinner
            android:id="@+id/filterSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/btn_dropdown"
            android:padding="8dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearMonthData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:padding="5dp"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/linearFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/s_n"
            android:textSize="16sp"
            android:textStyle="bold" />



        <TextView
             android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
             android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/transactions_amount"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

     <LinearLayout
        android:id="@+id/linearAllData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3"
         android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/linearFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/s_n"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_itemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/item_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
             android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
             android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/transactions_amount"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- RecyclerView for Displaying Sales Data -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearAllData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp" />

    <!-- Total Amount Section -->
    <LinearLayout
        android:id="@+id/linearTotalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/resultView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grandTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Amount in Words Section -->
    <TextView
        android:id="@+id/amountInWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edt_border"
        android:gravity="start"
        android:padding="8dp"
        android:textAlignment="inherit"
        android:textColor="@color/colorBlack"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollHorizontally="true"
        app:layout_constraintTop_toBottomOf="@+id/linearTotalAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
